			ROX-Session
			A very simple session manager
			by Thomas Leonard

14-Jun-2003
Added italian translations: src/po/it.po, AppInfo.xml

07-Jun-2003
~~~~~~~~~~~
Window manager list now only shows installed window managers (Richard Boulton).

15-May-2003
~~~~~~~~~~~
Added Japanese translation (UTUMI Hirosi).

25-Apr-2003
~~~~~~~~~~~
Close stdout when running child processes for users running startx from the
console, since some terminal applications try to read from the console,
freezing X (Keith R. John Warno).

17-Apr-2003
~~~~~~~~~~~
Added note in RunROX explaining the need for -n (suggested by Keith R. John
Warno).

17-Apr-2003 (Release 0.1.19)
~~~~~~~~~~~
Update logging code to handle GTK+-2.2 (so ROX-Session doesn't try to log
its own errors and deadlock).
Only show themes with a gtk-2.0 subdirectory.

16-Apr-2003
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

12-Apr-2003
~~~~~~~~~~~
GTK theme option is now a menu of possible choices.

05-Mar-2003
~~~~~~~~~~~
Added Framer to the default list of window managers.

27-Feb-2003
~~~~~~~~~~~
French translation of AppInfo (Vincent Lefèvre).

25-Feb-2003
~~~~~~~~~~~
Added Russian translation (Alexey Lubimov).

13-Feb-2003
~~~~~~~~~~~
Added DnD threshold and GTK theme XSettings. Updated to new Options code
(fixes minor bug with the language indicator).

11-Feb-2003
~~~~~~~~~~~
Shade power buttons if no command is set (KRJW).

29-Dec-2002
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

20-Dec-2002
~~~~~~~~~~~
Run ROX-Filer from a separate RunROX script. This allows ROX-Session to offer
to restart the filer if it crashes. If you've made your own Login file, remove
the lines to run ROX-Filer from it.

09-Dec-2002 (Release 0.1.18)
~~~~~~~~~~~
Style improvements to options window.

04-Dec-2002
~~~~~~~~~~~
Added a German translation (Guido Schimmels).

29-Nov-2002
~~~~~~~~~~~
Remove the '?' image from the dialog box; it made it too cluttered (suggested
by Alastair Porter).

28-Nov-2002
~~~~~~~~~~~