@@ -2,6 +2,9 @@
 			A very simple session manager
 			by Thomas Leonard
 
+18-Jun-2003
+Added italian translation: Help/Guide/AppInfo.xml
+
 14-Jun-2003
 Added italian translations: src/po/it.po, AppInfo.xml
 
